--- a/hack/release.toml
+++ b/hack/release.toml
@@ -24,7 +24,7 @@ preface = """
 * containerd: 2.0.2
 * etcd: 3.5.18
 * Flannel: 0.26.4
-* Kubernetes: 1.32.2
+* Kubernetes: 1.33.0-alpha.2
 
 Talos is built with Go 1.24.0.
 """
