--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-02-27T15:41:51Z by kres 1281806.
+# Generated on 2025-03-04T16:42:28Z by kres 1281806.
 
 name: default
 concurrency:
@@ -2998,6 +2998,7 @@ jobs:
           QEMU_EXTRA_DISKS_DRIVERS: nvme
           QEMU_EXTRA_DISKS_SIZE: "12288"
           QEMU_MEMORY_WORKERS: "4096"
+          QEMU_SYSTEM_DISK_SIZE: "20480"
           QEMU_WORKERS: "3"
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CONFIG_PATCH_CONTROLPLANE: '@hack/test/patches/longhorn-cp.yaml'
@@ -3418,7 +3419,7 @@ jobs:
           TAG_SUFFIX: -race
           WITH_RACE: "1"
         run: |
-          make initramfs installer-base
+          make initramfs installer-base imager installer
       - name: e2e-qemu-race
         env:
           GITHUB_STEP_NAME: ${{ github.job}}-e2e-qemu-race
