--- a/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-02-26T15:23:43Z by kres 1281806.
+# Generated on 2025-03-04T16:42:28Z by kres 1281806.
 
 name: integration-qemu-csi-longhorn-cron
 concurrency:
@@ -116,6 +116,7 @@ jobs:
           QEMU_EXTRA_DISKS_DRIVERS: nvme
           QEMU_EXTRA_DISKS_SIZE: "12288"
           QEMU_MEMORY_WORKERS: "4096"
+          QEMU_SYSTEM_DISK_SIZE: "20480"
           QEMU_WORKERS: "3"
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CONFIG_PATCH_CONTROLPLANE: '@hack/test/patches/longhorn-cp.yaml'
