test: enable image-cache in the cron
Enable cron pipeline.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1676,6 +1676,8 @@ spec:
       runners:
         - self-hosted
         - talos
+      crons:
+        - '30 2 * * *'
       triggerLabels:
         - integration/image-cache
       steps:
