--- a/.github/workflows/slack-notify.yaml
+++ b/.github/workflows/slack-notify.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-01-15T19:56:36Z by kres 3b3f992.
+# Generated on 2025-03-04T12:52:37Z by kres 1281806.
 
 name: slack-notify
 "on":
@@ -27,6 +27,7 @@ name: slack-notify
       - integration-qemu-csi-openebs-cron
       - integration-images-cron
       - integration-reproducibility-test-cron
+      - integration-image-cache-cron
       - integration-image-factory-cron
       - integration-aws-cron
       - integration-aws-nvidia-oss-cron
