--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-03-04T16:42:28Z by kres 1281806.
+# Generated on 2025-03-07T13:42:22Z by kres d88db2f.
 
 name: default
 concurrency:
@@ -1562,6 +1562,10 @@ jobs:
           PLATFORM: linux/amd64
         run: |
           make uki-certs
+      - name: build
+        if: github.event_name == 'schedule'
+        run: |
+          make talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer-base imager
       - name: image-cache
         env:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
