fix: qemu: archive cluster logs only after stopping VMs
Otherwise the archive is corrupted due to QEMU still writing to the logs while they are being archived

ci: enable --with-json-logs by default for e2e-qemu

Also pull in golangci fixes

Signed-off-by: Dmitrii Sharshakov <dmitry.sharshakov@siderolabs.com>

--- a/.github/workflows/integration-misc-2-cron.yaml
+++ b/.github/workflows/integration-misc-2-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-02-26T15:23:43Z by kres 1281806.
+# Generated on 2025-03-10T14:45:43Z by kres ef4356e.
 
 name: integration-misc-2-cron
 concurrency:
@@ -123,6 +123,7 @@ jobs:
           USE_DISK_IMAGE: "true"
           VIA_MAINTENANCE_MODE: "true"
           WITH_DISK_ENCRYPTION: "true"
+          WITH_JSON_LOGS: "false"
         run: |
           sudo -E make e2e-qemu
       - name: e2e-disk-image-bios
