--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-03-07T13:42:22Z by kres d88db2f.
+# Generated on 2025-03-10T14:45:43Z by kres ef4356e.
 
 name: default
 concurrency:
@@ -2235,6 +2235,7 @@ jobs:
           USE_DISK_IMAGE: "true"
           VIA_MAINTENANCE_MODE: "true"
           WITH_DISK_ENCRYPTION: "true"
+          WITH_JSON_LOGS: "false"
         run: |
           sudo -E make e2e-qemu
       - name: e2e-disk-image-bios
@@ -2874,7 +2875,6 @@ jobs:
           QEMU_EXTRA_DISKS_SIZE: "10240"
           USER_DISKS_MOUNTS: /var/lib/extra,/var/lib/p1,/var/lib/p2
           WITH_CONFIG_PATCH_WORKER: '@hack/test/patches/ephemeral-nvme.yaml:@hack/test/patches/dm-raid-module.yaml'
-          WITH_JSON_LOGS: "true"
           WITH_USER_DISK: "true"
         run: |
           sudo -E make e2e-qemu
