--- a/hack/release.toml
+++ b/hack/release.toml
@@ -24,7 +24,7 @@ preface = """
 * containerd: 2.0.3
 * etcd: 3.5.19
 * Flannel: 0.26.4
-* Kubernetes: 1.33.0-alpha.3
+* Kubernetes: 1.33.0-beta.0
 
 Talos is built with Go 1.24.1.
 """
